--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -149,6 +149,9 @@
                     <div class="dropdown-divider"></div>
                     <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Monitor_Account_Trades_Settings') }}">Monitor Account Settings ➕</a></li>
                     <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Monitor_Account_Trades') }}">Monitor Account ⭐</a></li>
+                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('analysis.Client_Comment_Scalp') }}">Client Comment Scalp ⭐</a></li>
+
+
 
                   </ul>
                 </li>
@@ -321,6 +324,9 @@
                   <li><a class="dropdown-item" href="http://www.cfhclearing.com/products/">CHF Product List</a></li>
                   <li><a class="dropdown-item" href="https://trade.cfhclearing.com/Pages/Login.aspx?ReturnUrl=%2f">CFH Clear Pro Web</a></li>
                   <li><a class="dropdown-item" href="https://backoffice.cfhclearing.com">CFH Back Office</a></li>
+
+
+
                 </ul>
               </li>
 
@@ -333,6 +339,7 @@
                   <li><a class="dropdown-item" href="https://secure.globalprime.com/AccountGP">GP Client Portal</a></li>
                   <li><a class="dropdown-item" href="https://www.globalprime.com/account/product-alerts/">GP Product Alert</a></li>
                   <li><a class="dropdown-item" href="https://www.globalprime.com/trading-conditions/spreads/">GP Spread</a></li>
+                  <li><a class="dropdown-item" href="https://portal.primexm.com/Home/Login">GP Price Portal</a></li>
 
                 </ul>
               </li>
