--- a/Risk_Aaron/app/templates/Wbwrk_Multitable_Borderless.html
+++ b/Risk_Aaron/app/templates/Wbwrk_Multitable_Borderless.html
@@ -646,9 +646,9 @@
 
  {% for key, value in Table_name.items() %}
   {% if "Hs" in value %}
-  <div class="col-lg-6 col-md-6 col-sm-12" id="Data_table_Div_{{ value }}"></div>
+  <div class="col-lg-6 col-md-12 col-sm-12" id="Data_table_Div_{{ value }}"></div>
   {% elif "Hr" in value %}
-    <hr style="height:5px" class="col-lg-12 col-md-12 col-sm-12">
+    <hr style="height:3px;background-color: #333;" class="col-lg-12 col-md-12 col-sm-12">
   {% elif "H" in value %}
     <div class="col-lg-12 col-md-12 col-sm-12" id="Data_table_Div_{{ value }}"></div>
   {% elif "V" in value %}
