--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -316,6 +316,18 @@
 
                 </ul>
               </li>
+
+              <li class="nav-item dropleft">
+                <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown10" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <b>Lean Works</b>
+                </a>
+                <ul class="dropdown-menu pull-left" aria-labelledby="navbarDropdown10">
+                  <li><a class="dropdown-item" href="https://support.lwork.com/">Lean Works</a></li>
+                  <li><a class="dropdown-item" href="https://broker.bgifx.com/">Broker Works</a></li>
+                </ul>
+              </li>
+
+
               <li class="nav-item dropleft">
                 <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <b>CFH</b> Web
