--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -319,11 +319,11 @@
 
               <li class="nav-item dropleft">
                 <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown10" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <b>Lean Works</b>
+                  <b>LeanWork</b>
                 </a>
                 <ul class="dropdown-menu pull-left" aria-labelledby="navbarDropdown10">
-                  <li><a class="dropdown-item" href="https://support.lwork.com/">Lean Works</a></li>
-                  <li><a class="dropdown-item" href="https://broker.bgifx.com/">Broker Works</a></li>
+                  <li><a class="dropdown-item" href="https://support.lwork.com/">Lean Work</a></li>
+                  <li><a class="dropdown-item" href="https://broker.bgifx.com/">Broker Work</a></li>
                 </ul>
               </li>
 
