--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -323,7 +323,10 @@
                 </a>
                 <ul class="dropdown-menu pull-left" aria-labelledby="navbarDropdown10">
                   <li><a class="dropdown-item" href="https://support.lwork.com/">Lean Work</a></li>
-                  <li><a class="dropdown-item" href="https://broker.bgifx.com/">Broker Work</a></li>
+                  <li><a class="dropdown-item" href="https://broker.bgifx.co/">Broker Work</a></li>
+                  <li><a class="dropdown-item" href="https://trader.bgifx.co/">Trader Work</a></li>
+
+
                 </ul>
               </li>
 
