Added Yudi to the nav bar.
Added Yudi's name to the nav bar.

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -288,6 +288,38 @@
         {% endif %}
 
         {% if current_user.role in ["Admin", "Risk", "Risk_TW"] %}
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown8" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Yudi 👾
+          </a>
+
+          <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown8">
+
+
+
+            <li class="nav-item dropleft">
+              <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown11" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Tableau
+              </a>
+              <ul class="dropdown-menu pull-left" aria-labelledby="navbarDropdown11">
+
+                <li><a class="dropdown-item" href="https://202.88.105.5/#/views/MARTINGAGROUP/MARTINGALEGROUP">Martingale Group's Performance</a></li>
+                <li><a class="dropdown-item" href="https://202.88.105.5/#/views/DailyPerformanceSummary/DAILYPERFORMANCEREPORTV1">Daily Performance Summary</a></li>
+
+                <div class="dropdown-divider"></div>
+                <li><a class="dropdown-item" href="http://202.88.105.5/#/views/SYMBOLALERTHOURLYVOLUME/AlertBoard?:showAppBanner=false&:display_count=n&:showVizHome=n&:origin=viz_share_link">Symbol Alert</a></li>
+                <li><a class="dropdown-item" href="http://202.88.105.5/#/views/SYMBOLALERTHOURLYVOLUME2/AlertBoard?:showAppBanner=false&:display_count=n&:showVizHome=n&:origin=viz_share_link">Symbol Alert(view all profitable trades)</a></li>
+                <li><a class="dropdown-item" href="http://202.88.105.5/#/views/ClientAnalysis/Dashboard1?:showAppBanner=false&:display_count=n&:showVizHome=n&:origin=viz_share_link">Client Analysis</a></li>
+                <li><a class="dropdown-item" href="http://202.88.105.5/#/views/Deposit-Withdrawal/MainDW?:showAppBanner=false&:display_count=n&:showVizHome=n&:origin=viz_share_link">Deposit-Withdrawal</a></li>
+                <div class="dropdown-divider"></div>
+              </ul>
+            </li>
+
+          </ul>
+          </li>
+
+
           <!-- Level one dropdown -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown8" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -387,11 +419,6 @@
                 </a>
                 <ul class="dropdown-menu pull-left" aria-labelledby="navbarDropdown11">
                   <li><a class="dropdown-item" href="http://202.88.105.5/">BGI Tableau Server</a></li>
-                  <div class="dropdown-divider"></div>
-                  <li><a class="dropdown-item" href="http://202.88.105.5/#/views/SYMBOLALERTHOURLYVOLUME/AlertBoard?:showAppBanner=false&:display_count=n&:showVizHome=n&:origin=viz_share_link">👾Symbol Alert</a></li>
-                  <li><a class="dropdown-item" href="http://202.88.105.5/#/views/SYMBOLALERTHOURLYVOLUME2/AlertBoard?:showAppBanner=false&:display_count=n&:showVizHome=n&:origin=viz_share_link">👾Symbol Alert(view all profitable trades)</a></li>
-                  <li><a class="dropdown-item" href="http://202.88.105.5/#/views/ClientAnalysis/Dashboard1?:showAppBanner=false&:display_count=n&:showVizHome=n&:origin=viz_share_link">👾Client Analysis</a></li>
-                  <li><a class="dropdown-item" href="http://202.88.105.5/#/views/Deposit-Withdrawal/MainDW?:showAppBanner=false&:display_count=n&:showVizHome=n&:origin=viz_share_link">👾Deposit-Withdrawal</a></li>
                   <div class="dropdown-divider"></div>
 
                   <li><a class="dropdown-item" href="http://202.88.105.5/views/Yesterday_Trades_0617/Yesterday_PNLVOL?:showAppBanner=false&:display_count=n&:showVizHome=n&:origin=viz_share_link/">🤪Yesterday: Revenue & Volume by Entity</a></li>
