--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -315,6 +315,11 @@
                 <div class="dropdown-divider"></div>
               </ul>
             </li>
+            <li><a class="dropdown-item" href="{{ url_for('analysis.yudi_test') }}">yudi test Encryption</a></li>
+
+
+
+
 
           </ul>
           </li>
