changed SQL for Symbol float.
UK  side no need to minus 1 day

--- a/Risk_Aaron/app/templates/Risk_Download_Page.html
+++ b/Risk_Aaron/app/templates/Risk_Download_Page.html
@@ -164,7 +164,11 @@
       <td>MAM MT5 Server Plugin Proxy.</td>
       <td><a href="https://keysoftstore.blob.core.windows.net/mam5-plugin/MAM5.dll"><input class="btn btn-primary btn-lg btn-block" type="button" value="MAM MT5 Server Plugin Proxy"></a></td>
     </tr>
-
+    <tr>
+      <td><b>Global Prime MT4</b></td>
+      <td>Global Prime MT4</td>
+      <td><a href="https://download.mql5.com/cdn/web/global.prime.pty/mt4/globalprime4setup.exe"><input class="btn btn-primary btn-lg btn-block" type="button" value="Global Prime MT4"></a></td>
+    </tr>
 
 
   </table>
