Adding Christmas Pics as Background =)

--- a/Risk_Aaron/app/templates/A_Book_Matching.html
+++ b/Risk_Aaron/app/templates/A_Book_Matching.html
@@ -5,7 +5,8 @@
 {% block styles %}
 {{ super() }}
 <style>
-  body { background: #eee url({{ url_for('static', filename='css/tic-tac-toe.png') }}); }
+  /* body { background: #eee url({{ url_for('static', filename='css/tic-tac-toe.png') }}); } */
+  body { background: #eee url({{ url_for('static', filename='css/Christmas_trees.svg') }}); }
 </style>
 {% endblock %}
 
