More Christmas background =)

--- a/Risk_Aaron/app/templates/A_Book_Matching.html
+++ b/Risk_Aaron/app/templates/A_Book_Matching.html
@@ -6,7 +6,7 @@
 {{ super() }}
 <style>
   /* body { background: #eee url({{ url_for('static', filename='css/tic-tac-toe.png') }}); } */
-  body { background: #eee url({{ url_for('static', filename='css/Christmas_trees.svg') }}); }
+  body { background: #eee url({{ url_for('static', filename='css/Christmas_vector_10.jpg') }}); }
 </style>
 {% endblock %}
 
