More Christmas decor!

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -150,7 +150,9 @@
                     <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Monitor_Account_Trades_Settings') }}">Monitor Account Settings ➕</a></li>
                     <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Monitor_Account_Trades') }}">Monitor Account ⭐</a></li>
                     <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('analysis.Client_Comment_Scalp') }}">Client Comment Scalp ⭐</a></li>
-
+                    <div class="dropdown-divider"></div>
+                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('notifications_bp.Client_No_Trades') }}">Client no Open symbol position⭐</a></li>
+                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('notifications_bp.Large_volume_Login') }}">Large Volume Traders ⭐</a></li>
 
 
                   </ul>
