--- a/Risk_Aaron/app/templates/A_Book_Matching.html
+++ b/Risk_Aaron/app/templates/A_Book_Matching.html
@@ -6,7 +6,18 @@
 {{ super() }}
 <style>
   /* body { background: #eee url({{ url_for('static', filename='css/tic-tac-toe.png') }}); } */
-  body { background: #eee url({{ url_for('static', filename='css/Christmas_vector_10.jpg') }}); }
+  /* body { background: #eee url({{ url_for('static', filename='css/Christmas_vector_10.jpg') }}); } */
+
+  {% if backgroud_Filename %}
+    body { background: #eee url({{ url_for('static', filename=backgroud_Filename) }}); }
+  {% else %}
+    body { background: #eee url({{ url_for('static', filename='css/Christmas_vector_10.jpg') }}); }
+  {% endif %}
+
+
+
+
+
 </style>
 {% endblock %}
 
