--- a/Risk_Aaron/app/templates/Wbwrk_Multitable_Borderless.html
+++ b/Risk_Aaron/app/templates/Wbwrk_Multitable_Borderless.html
@@ -426,6 +426,22 @@
                 }
                 sString += '</tr>';
             }
+
+
+            // Want to write a table footer.
+            sString += "<tfoot><tr>";
+
+            for (var x in table_Data) {
+                //For table footer.
+                for (var xx in table_Data[x]) {
+                    sString += '<th>';
+                    sString += '</th>';
+                }
+                break;
+            }
+            sString += "</tr></tfoot>";
+
+
             sString += '</table>';
             return sString;
           }
@@ -537,6 +553,91 @@
 
         $(div_id).html(data);
         table = $( table_id ).DataTable( {
+
+        "footerCallback": function (row, data, start, end, display) {
+          var api = this.api(), data;
+
+
+          var numberWithCommas = function(x) {
+            return x.toLocaleString(undefined, {maximumFractionDigits:4})
+          }
+
+
+          // converting to interger to find total
+           var intVal = function ( i ) {
+            if (typeof i === 'string'){
+              //sstr = i.replace( /[^\d\.|-]*/g, '');
+
+              // Prob can be a better regax if there was enough time to rewrite
+              sstr = i.replace(/(<([^>]+)>)/gi, "").replace( /[^\d\.|-]*/g, '');
+              return isNaN(Number(sstr)) ?
+              0 : Number(sstr);
+            }else {
+              return isNaN(Number(i)) ? 0 : Number(i);
+            }
+          };
+          //alert(intVal("77.81"));
+
+           nb_cols = api.columns().nodes().length;
+
+          // Want to write to the footer of the table as a summation
+          $( api.column( 0 ).footer() ).html("Total");
+           var j = 1; // Want to ignore the first column.
+
+          // The columns that would make sense to sum up.
+          var sum_col = ["lots", "volume", "revenue", "swaps", "profit", "rebate"];
+
+
+
+          while(j < nb_cols){
+
+            col_name = api.column(j).header().textContent;
+            col_name = col_name.toLowerCase();
+            var string_found = 0; // Init the flag to 0
+
+            // Want to check if it makes sense to do the sum.
+            for (var i = 0; i < sum_col.length; i++) {
+                if (col_name.search(sum_col[i]) >= 0){  // Loop thru to find. If found, break.
+                  string_found = i+1;// Raise the flag
+                  break;
+              }
+            }
+            //console.log(string_found);
+            //console.log(col_name);
+
+          if (string_found == 0){  // When it dosn't make sense to sum.
+            // Update footer
+             $( api.column( j ).footer() ).html("-");
+          }else{  // When we want to sum it up.
+            var pageTotal = api.column( j, { page: 'current'} )
+                   .data().reduce( function (a, b) {
+                       //alert("a: " + a + " : " + intVal(a) + "b: " + b + " : "  + intVal(b));
+                       return intVal(a) + intVal(b);
+                   }, 0 );
+
+            // Want to color the text if it's +ve or -ve
+            var span_tag_start = "", span_tag_end = "";
+            if (string_found >= 3) {  // Revenue. Will want to color it.
+              if (pageTotal > 0){ // +ve
+                span_tag_start = '<span style="color:green">'
+                  span_tag_end = '</span>'
+              }else if(pageTotal < 0){
+                span_tag_start = '<span style="color:red">'
+                  span_tag_end = '</span>'
+              }
+            }
+            var cell_text = span_tag_start + numberWithCommas(Number(pageTotal.toFixed(2))) + span_tag_end;
+
+             // Update footer
+             $( api.column( j ).footer() ).html(cell_text);
+
+          }
+            j++;
+        }},
+
+
+
+
         paging: false,
         searching: true,
         "aaSorting": order // Don't want to sort initially
