--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -313,6 +313,8 @@
                 <li><a class="dropdown-item" href="http://202.88.105.5/#/views/SYMBOLALERTHOURLYVOLUME2/AlertBoard?:showAppBanner=false&:display_count=n&:showVizHome=n&:origin=viz_share_link">Symbol Alert(view all profitable trades)</a></li>
                 <li><a class="dropdown-item" href="http://202.88.105.5/#/views/ClientAnalysis/Dashboard1?:showAppBanner=false&:display_count=n&:showVizHome=n&:origin=viz_share_link">Client Analysis</a></li>
                 <li><a class="dropdown-item" href="http://202.88.105.5/#/views/Deposit-Withdrawal/MainDW?:showAppBanner=false&:display_count=n&:showVizHome=n&:origin=viz_share_link">Deposit-Withdrawal</a></li>
+                <li><a class="dropdown-item" href="https://202.88.105.5/#/views/BLUETRADERGROUP/BLUETRADERGROUP">Blue Traders</a></li>
+
                 <div class="dropdown-divider"></div>
               </ul>
             </li>
