Addded Yudi's new URL

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -329,6 +329,10 @@
                 <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/monitoring_tools/2_TW_YJ_Cls1_5_tracking.php">2_TW_YJ_Cls1_5 Daily Pnl</a></li>
                 <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/monitoring_tools/UEGL_RebatePerLot.php">EUGL Rebate Per Lot</a></li>
                 <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/monitoring_tools/trade_Duration_tracking.php">Trades Duration</a></li>
+
+                <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/Monitoring_tools/MT5_Esunny_Check.php">MT5 Esunny Matching</a></li>
+                <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/Monitoring_tools/MT5_Monitoring_Float.php">MT5 Float Monitoring</a></li>
+
                 <div class="dropdown-divider"></div>
               </ul>
             </li>
