--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -325,7 +325,7 @@
                 🔔 Monitoring Tools
               </a>
               <ul class="dropdown-menu pull-left" aria-labelledby="navbarDropdown20">
-                <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/monitoring_tools/login_monitoring_list_new.php">Login Watch List</a></li>
+                <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/Daily_Reports/MT4MT5_login_monitoring_list.php">Login Watch List</a></li>
                 <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/monitoring_tools/Monitoring_tools_login_group.php">Investigate Trades by Login/Group</a></li>
                 <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/monitoring_tools/KH_GROUP_CHECK.php">KH Group Check</a></li>
                 <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/monitoring_tools/2_TW_YJ_Cls1_5_tracking.php">2_TW_YJ_Cls1_5 Daily Pnl</a></li>
@@ -344,6 +344,9 @@
                 🕵️ Alerts
               </a>
               <ul class="dropdown-menu pull-left" aria-labelledby="navbarDropdown13">
+
+
+                <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/Daily_Reports/MT4MT5_login_monitoring_list.php">Login Watch List</a></li>
                 <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/alerts/Short_Interval_Trades.php">Short Interval Trades</a></li>
                 <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/alerts/Short_Interval_Trades_KH.php">Short Interval Trades_KH</a></li>
                 <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/alerts/MT5_Short_Interval_Trades.php">Short Interval Trades_MT5</a></li>
@@ -376,6 +379,7 @@
                 <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/monthly_reports/HK_GB_REBATE.PHP">HK_GB_REBATE</a></li>
                 <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/monthly_reports/2_TW_YJ_Cls1_5_Monthly_Rebate.php">2_TW_YJ_Cls1_5 Monthly Rebate</a></li>
                 <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/monthly_reports/UEGL_Monthly_Rebate.php">EUGL Monthly Rebate</a></li>
+                <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/Monthly_Reports/EndofMonth_FX_Rates.php">Month-End FX Rates</a></li>
                 <div class="dropdown-divider"></div>
               </ul>
             </li>
