Added Client Group Page. Open trades Only.

--- a/Risk_Aaron/app/templates/Wbwrk_Multitable_Borderless.html
+++ b/Risk_Aaron/app/templates/Wbwrk_Multitable_Borderless.html
@@ -585,7 +585,7 @@
            var j = 1; // Want to ignore the first column.
 
           // The columns that would make sense to sum up.
-          var sum_col = ["lots", "volume", "revenue", "swaps", "profit", "rebate"];
+          var sum_col = ["lots", "volume", "revenue", "swaps", "profit", "rebate", "total"];
 
 
 
