--- a/Risk_Aaron/app/templates/Webworker_Symbol_Float.html
+++ b/Risk_Aaron/app/templates/Webworker_Symbol_Float.html
@@ -23,6 +23,8 @@
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css">
 <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js" crossorigin="anonymous"></script>
 
+<script type='text/javascript' src="http://202.88.105.5/javascripts/api/tableau-2.min.js"></script>
+
 
 <script src="{{ url_for('static', filename='js/sweetalert2.all.min.js') }}"></script>
 
@@ -481,6 +483,7 @@
       var Increment_counter = 1;
 
       var Refresh_Page_Counter = 0;  // When to refresh the page.
+      var refresh_viz_count = 0;    // counter to decrease the viz refresh rate.
 
       //var SetInterval_MT4_LP;
       //var SetInterval_LP_Details;
@@ -586,7 +589,7 @@
                   }
                 }
                 var cell_text = span_tag_start + numberWithCommas(Number(pageTotal.toFixed(2))) + span_tag_end;
-                       
+
                  // Update footer
                  $( api.column( j ).footer() ).html(cell_text);
 
@@ -613,6 +616,7 @@
           if ('consolidate' in ret_obj){  // If we want to consolidate all the errors.
             consolidate = true;
           }
+
           for (let key in ret_obj){
 
             if (key.search("TO_LOG") != -1){  //If we want to log this to consol from web worker.
@@ -644,6 +648,23 @@
                 //console.log(key);
                 //'#' + key + '_table' will be the name of the table in the Div.
                  refresh_datatable('#' + key, current_html + ret_obj[key]);
+                 if (refresh_viz_count >= 2){  // Only want to refresh the viz every 30 secons.
+                 //console.log("Refreshing viz data.");
+                  viz.refreshDataAsync(); // Want to refresh the tableau viz's data
+
+                  var h = (new Date()).getHours();
+                  var m = (new Date()).getMinutes();
+                  var s = (new Date()).getSeconds();
+                  h = h < 10? "0"+h : h;
+                  m = m < 10? "0"+m : m;
+                  s = s < 10? "0"+s : s;
+
+                  console.log("Refreshing Viz. " + h+':'+m+':'+s );
+                  refresh_viz_count = 0;  // reset the counbter
+                }else{
+                  refresh_viz_count = refresh_viz_count + 1;  // Increment when we are not refreshing the Viz
+                }
+
 
 
               }else{
@@ -673,6 +694,12 @@
         }else{
           console.log(e.data);
         }
+
+
+
+
+
+
       };
 
     // Could be anything. We just want to post something out.
@@ -680,6 +707,15 @@
 
     // To let the page not run Ajax when tab is deemed idle.
     var TabIsNotActive=false;
+
+    var viz;
+    function initViz() {
+        var containerDiv = document.getElementById("vizContainer"),
+        url = "https://202.88.105.5/views/SymbolFloatAll/SymbolFloatVolume";
+        viz = new tableau.Viz(containerDiv, url);
+        //viz.setFrameSize(parseInt(1600, 10), parseInt(950, 10));
+    }
+    initViz();
 
     setInterval(function(){
       var h = (new Date()).getHours();
@@ -785,12 +821,12 @@
   </div>
 </div>
 
-{% if tableau_url %}
+<!-- {% if tableau_url %}
 <br>
 {{ tableau_url }}
-{% endif %}
+{% endif %} -->
 
-
+<div id="vizContainer" style='width: 1600px; height: 950px;'></div>
 
 {% endblock %}
 
