--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -351,6 +351,8 @@
                 <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/alerts/Daily_mam_sub_monitoring.php">Daily mam/sub pnl Monitoring</a></li>
                 <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/alerts/MT5_Daily_mam_sub_monitoring.php">Daily mam/sub pnl Monitoring MT5</a></li>
                 <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/alerts/martingale_group.php">Martigale Group</a></li>
+                <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/alerts/bluetrader_group.php">Bluetrader Group</a></li>
+
 
                 <div class="dropdown-divider"></div>
               </ul>
