Update MT5 Floating

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -172,6 +172,8 @@
                     <li><a class="dropdown-item" href="{{ url_for('analysis.save_mt5_BGI_float') }}">Save Floating MT5 💾</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('analysis.Clear_session') }}">Clear Site Cookies</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('analysis.Client_trades_form') }}">Individual Client Trades</a></li>
+                    <div class="dropdown-divider"></div>
+                    <li><a class="dropdown-item" href="{{ url_for('mt4_mt5.BGI_MT5_Symbol_Float') }}">MT5 Symbol Floating 🎶 </a></li>
 
                   </ul>
                 </li>
