MT5 Symbol Float Done V1

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -169,11 +169,11 @@
                     <li><a class="dropdown-item" href="{{ url_for('analysis.BGI_Symbol_Float') }}">Symbol Floating 🎶 </a></li>
                     <li><a class="dropdown-item" href="{{ url_for('analysis.BGI_Country_Float') }}">Country Floating 🌎</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('analysis.save_mt4_BGI_float') }}">Save Floating MT4 💾</a></li>
-                    <li><a class="dropdown-item" href="{{ url_for('analysis.save_mt5_BGI_float') }}">Save Floating MT5 💾</a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('mt5_monitoring.save_mt5_BGI_float') }}">Save Floating MT5 💾</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('analysis.Clear_session') }}">Clear Site Cookies</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('analysis.Client_trades_form') }}">Individual Client Trades</a></li>
                     <div class="dropdown-divider"></div>
-                    <li><a class="dropdown-item" href="{{ url_for('mt4_mt5.BGI_MT5_Symbol_Float') }}">MT5 Symbol Floating 🎶 </a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('mt5_monitoring.BGI_MT5_Symbol_Float') }}">MT5 Symbol Floating 🎶 </a></li>
 
                   </ul>
                 </li>
