--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -287,6 +287,8 @@
             <a class="dropdown-item" href="http://220.128.56.250:8080/live1/index.action">Live 1 setting</a>
             <a class="dropdown-item" href="http://220.128.56.250:8080/live2/index.action">Live 2 Setting</a>
             <a class="dropdown-item" href="http://220.128.56.250:8080/live3/symbol.action">Live 3 Setting</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="{{ url_for('Risk_Client_Tools_bp.NoTrade_Change_ReadOnly_Settings') }}">No Trades Read Only Settings</a>
 
 
           </div>
