Change A book page to console log out the time.

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -421,11 +421,13 @@
                   <b>OZ</b> Web</b>
                 </a>
                 <ul class="dropdown-menu pull-left" aria-labelledby="navbarDropdown10">
-                  <li><a class="dropdown-item" href="https://38.76.4.235:44300/Account/Login?ReturnUrl=%2F">BGI NY4 Margin Hub</a></li>
-                  <li><a class="dropdown-item" href="https://38.76.4.235:44301/">BGI NY4 Retail Hub</a></li>
+                  <li><a class="dropdown-item" href="https://blackwellglobal-ny-live.onezero.com:44300">BGI NY4 Margin Hub</a></li>
+                  <li><a class="dropdown-item" href="https://blackwellglobal-ny-live.onezero.com:44301">BGI NY4 Retail Hub</a></li>
                   <div class="dropdown-divider"></div>
+
                   <li><a class="dropdown-item" href="https://38.76.4.67:44300/Account/Login?ReturnUrl=%2F">Vantage BGI Trading Hub</a></li>
                   <div class="dropdown-divider"></div>
+
                   <li><a class="dropdown-item" href="https://169.45.220.20:44300">BGI Demo Margin Trading Hub</a></li>
                   <div class="dropdown-divider"></div>
                   <li><a class="dropdown-item" href="https://arms3.onezero.com/login">ARMS 💪</a></li>
