Updated No open trades change Group tool

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -108,7 +108,7 @@
 
 
                     <div class="dropdown-divider"></div>
-                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.noopentrades_changegroup') }}">Change Group ⭐</br>(No Open Trades)</a></li>
+                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Risk_Client_Tools_bp.noopentrades_changegroup') }}">Change Group ⭐</br>(No Open Trades)</a></li>
 
                     <div class="dropdown-divider"></div>
                     <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/All/Track_Account_Open_Trades_V1/">MonitorOpen Trades ⭐</a></li>
