--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -289,6 +289,8 @@
             <a class="dropdown-item" href="http://220.128.56.250:8080/live3/symbol.action">Live 3 Setting</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="{{ url_for('Risk_Client_Tools_bp.NoTrade_Change_ReadOnly_Settings') }}">No Trades Read Only Settings</a>
+            <a class="dropdown-item" href="{{ url_for('mt5_monitoring.Futures_LP_Details') }}">Futures LP Details</a>
+
 
 
           </div>
