--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -322,6 +322,9 @@
                 <li><a class="dropdown-item" href="http://202.88.105.5/#/views/ClientAnalysis/Dashboard1?:showAppBanner=false&:display_count=n&:showVizHome=n&:origin=viz_share_link">Client Analysis</a></li>
                 <li><a class="dropdown-item" href="http://202.88.105.5/#/views/Deposit-Withdrawal/MainDW?:showAppBanner=false&:display_count=n&:showVizHome=n&:origin=viz_share_link">Deposit-Withdrawal</a></li>
                 <li><a class="dropdown-item" href="https://202.88.105.5/#/views/BLUETRADERGROUP/BLUETRADERGROUP">Blue Traders</a></li>
+                <li><a class="dropdown-item" href="https://202.88.105.5/#/views/TrailingStopEA/TrailingStopEA">cmTrailingStopEA</a></li>
+
+
 
                 <div class="dropdown-divider"></div>
               </ul>
@@ -360,6 +363,7 @@
                 <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/alerts/MT5_Daily_mam_sub_monitoring.php">Daily mam/sub pnl Monitoring MT5</a></li>
                 <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/alerts/martingale_group.php">Martigale Group</a></li>
                 <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/alerts/bluetrader_group.php">Bluetrader Group</a></li>
+                <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/alerts/TrailingStopEA_group.php">cmTrailingStopEA</a></li>
 
 
                 <div class="dropdown-divider"></div>
