Changing HK Mismatch to red in color for the cell.

--- a/Risk_Aaron/app/templates/Wbwrk_Multitable_Borderless_redalert.html
+++ b/Risk_Aaron/app/templates/Wbwrk_Multitable_Borderless_redalert.html
@@ -389,7 +389,7 @@
                         //sString+= '<td>';
                     } else if (Relace_Word_found == 1) {
                         //If replace words was found, we want to give it a class
-                        sString += '<td class="table_highlight">';
+                        sString += '<td class="alert_cell">';
                         //sString+= '<td>';
                     } else {
                         sString += '<td>';
