--- a/Risk_Aaron/app/templates/Wbwrk_Multitable_Borderless_redalert.html
+++ b/Risk_Aaron/app/templates/Wbwrk_Multitable_Borderless_redalert.html
@@ -755,8 +755,10 @@
     <hr style="height:3px;background-color: #333;" class="col-lg-12 col-md-12 col-sm-12">
   {% elif "H" in value %}
     <div class="col-lg-12 col-md-12 col-sm-12" id="Data_table_Div_{{ value }}"></div>
+  {% elif "Vss" in value %}
+    <div class="col-lg-4 col-md-12 col-sm-12" id="Data_table_Div_{{ value }}" style="margin-left:auto;margin-right:auto;"></div>
   {% elif "V" in value %}
-    <div class="col-lg-6 col-md-6 col-sm-12" id="Data_table_Div_{{ value }}" style="margin-left:auto;margin-right:auto;"></div>
+    <div class="col-lg-6 col-md-12 col-sm-12" id="Data_table_Div_{{ value }}" style="margin-left:auto;margin-right:auto;"></div>
   {% else %}
   <!-- Would read as P for value.  -->
     <div class="chart col-lg-6 col-md-6 col-sm-12" id="plot_{{ value }}"></div>
