--- a/Risk_Aaron/app/templates/Wbwrk_Multitable_Borderless.html
+++ b/Risk_Aaron/app/templates/Wbwrk_Multitable_Borderless.html
@@ -150,7 +150,12 @@
   function sent_httprequest(method, url, data){
     const promise = new Promise((resolve, reject) => {
       const xhr = new XMLHttpRequest();
-      xhr.timeout = 90*1000;         // time in milliseconds
+      {% if ajax_timeout_sec %}
+        xhr.timeout =  {{ ajax_timeout_sec }} * 1000;
+      {% else %}
+        xhr.timeout = 90*1000;         // time in milliseconds
+      {% endif %}
+
       //xhr.responseType = 'json';    // We expect a json back.
       if (data){
         xhr.setRequestHeader('Content-Type','application/json');
@@ -755,6 +760,9 @@
     <div class="col-lg-12 col-md-12 col-sm-12" id="Data_table_Div_{{ value }}"></div>
   {% elif "V" in value %}
     <div class="col-lg-6 col-md-6 col-sm-12" id="Data_table_Div_{{ value }}" style="margin-left:auto;margin-right:auto;"></div>
+  {% elif "P_Long" in value %}
+  <div class="chart col-lg-12 col-md-12 col-sm-12" id="plot_{{ value }}"></div>
+
   {% else %}
   <!-- Would read as P for value.  -->
     <div class="chart col-lg-6 col-md-6 col-sm-12" id="plot_{{ value }}"></div>
