--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -175,6 +175,10 @@
                     <div class="dropdown-divider"></div>
                     <li><a class="dropdown-item" href="{{ url_for('mt5_monitoring.BGI_MT5_Symbol_Float') }}">MT5 Symbol Floating 🎶 </a></li>
                     <li><a class="dropdown-item" href="{{ url_for('analysis.BGI_Symbol_Float') }}">MT4 Symbol Floating 🎶 </a></li>
+                    <div class="dropdown-divider"></div>
+                    <li><a class="dropdown-item" href="{{ url_for('Spread.symbolSpread') }}">Symbol Spread [Daily]</a></li>
+
+
 
                   </ul>
                 </li>
@@ -198,6 +202,8 @@
                     <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1DeH5oOq6TNwfRPxTPUEDvHnbwfWbDH40RNY8fr3SvRg/edit?usp=sharing">Risk System Emails</a></li>
                     <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/12U-6eBDk3b_6VJnfAW6zP6rEKnJcKP_hRmcmoPKUtgA/edit?usp=sharing">Other Brokers Login</a></li>
                     <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1h7YOJPwF2HUCXaHsY9Y0lBm6Yv7gMCKNBHmFoldhAx4/edit#gid=0">OZ Margin hub whitelist</a></li>
+
+
 
                   </ul>
                 </li>
